<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_row_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/round_card"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/twitter_icon"
        android:src="@drawable/ic_twitter_logo_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_created_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/created_at"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_line2" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:text="@string/twitter_api"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="2dp"
        android:text="@string/twitterapi"
        android:textColor="@android:color/tertiary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/tv_text"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/profile_imagw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_twitter_logo_blue" />

    <TextView
        android:id="@+id/tv_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_created_at" />

    <TextView
        android:id="@+id/tv_set_Likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center|start"
        android:text="@string/likes"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_upload"
        app:layout_constraintTop_toBottomOf="@+id/tv_line3" />

    <ImageView
        android:id="@+id/iv_reply"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="38dp"
        android:contentDescription="@string/reply_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_upload"
        app:srcCompat="@drawable/ic_retwet" />

    <ImageView
        android:id="@+id/iv_upload"
        android:layout_width="25dp"
        android:layout_height="22dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/upload_icon"
        app:layout_constraintEnd_toStartOf="@+id/iv_reply"
        app:layout_constraintTop_toBottomOf="@+id/tv_line3"
        app:srcCompat="@drawable/upload" />

    <TextView
        android:id="@+id/tv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/_203"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_set_Likes"
        app:layout_constraintEnd_toStartOf="@+id/tv_set_Likes" />

    <TextView
        android:id="@+id/tv_set_Retweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/retweets"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_likes"
        app:layout_constraintEnd_toStartOf="@+id/tv_likes" />

    <TextView
        android:id="@+id/tv_retweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/_45"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_set_Retweets"
        app:layout_constraintEnd_toStartOf="@+id/tv_set_Retweets" />

</androidx.constraintlayout.widget.ConstraintLayout>